Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -40,7 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "im"
+    "import pandas as pd\n",
+    "import numpy as "
    ]
   },
   {
