Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -41,7 +41,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as "
+    "import numpy as np\n",
+    "import matplotlib."
    ]
   },
   {
