--- a/index.ipynb
+++ b/index.ipynb
@@ -42,7 +42,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib."
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inlin"
    ]
   },
   {
