--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
     "# Import and preview the data\n",
     "\n",
     "\n",
-    "df = None\n",
+    "df = pd.read_csv()\n",
     "\n",
     "\n"
    ]
