Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -263,8 +263,7 @@
     "\n",
     "\n",
     "df = pd.read_csv('mushrooms.csv')\n",
-    "pd.\n",
-    "df.head()\n",
+    "pandas.set_option('display.max_rows', df.shape[0]+1)df.head()\n",
     "\n"
    ]
   },
