Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -263,7 +263,8 @@
     "\n",
     "\n",
     "df = pd.read_csv('mushrooms.csv')\n",
-    "pandas.set_option('display.max_rows', df.shape[0]+1)df.head()\n",
+    "pd.set_option()\n",
+    "df.head()\n",
     "\n"
    ]
   },
