Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -263,7 +263,7 @@
     "\n",
     "\n",
     "df = pd.read_csv('mushrooms.csv')\n",
-    "pd.set_option()\n",
+    "pd.set_option('display.max_rows', df.shape[0]+1))\n",
     "df.head()\n",
     "\n"
    ]
