Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,9 @@
        "      <th>gill-spacing</th>\n",
        "      <th>gill-size</th>\n",
        "      <th>gill-color</th>\n",
-       "      <th>...</th>\n",
+       "      <th>stalk-shape</th>\n",
+       "      <th>stalk-root</th>\n",
+       "      <th>stalk-surface-above-ring</th>\n",
        "      <th>stalk-surface-below-ring</th>\n",
        "      <th>stalk-color-above-ring</th>\n",
        "      <th>stalk-color-below-ring</th>\n",
@@ -108,7 +110,9 @@
        "      <td>c</td>\n",
        "      <td>n</td>\n",
        "      <td>k</td>\n",
-       "      <td>...</td>\n",
+       "      <td>e</td>\n",
+       "      <td>e</td>\n",
+       "      <td>s</td>\n",
        "      <td>s</td>\n",
        "      <td>w</td>\n",
        "      <td>w</td>\n",
@@ -132,7 +136,9 @@
        "      <td>c</td>\n",
        "      <td>b</td>\n",
        "      <td>k</td>\n",
-       "      <td>...</td>\n",
+       "      <td>e</td>\n",
+       "      <td>c</td>\n",
+       "      <td>s</td>\n",
        "      <td>s</td>\n",
        "      <td>w</td>\n",
        "      <td>w</td>\n",
@@ -156,7 +162,9 @@
        "      <td>c</td>\n",
        "      <td>b</td>\n",
        "      <td>n</td>\n",
-       "      <td>...</td>\n",
+       "      <td>e</td>\n",
+       "      <td>c</td>\n",
+       "      <td>s</td>\n",
        "      <td>s</td>\n",
        "      <td>w</td>\n",
        "      <td>w</td>\n",
@@ -180,7 +188,9 @@
        "      <td>c</td>\n",
        "      <td>n</td>\n",
        "      <td>n</td>\n",
-       "      <td>...</td>\n",
+       "      <td>e</td>\n",
+       "      <td>e</td>\n",
+       "      <td>s</td>\n",
        "      <td>s</td>\n",
        "      <td>w</td>\n",
        "      <td>w</td>\n",
@@ -204,7 +214,9 @@
        "      <td>w</td>\n",
        "      <td>b</td>\n",
        "      <td>k</td>\n",
-       "      <td>...</td>\n",
+       "      <td>t</td>\n",
+       "      <td>e</td>\n",
+       "      <td>s</td>\n",
        "      <td>s</td>\n",
        "      <td>w</td>\n",
        "      <td>w</td>\n",
@@ -218,7 +230,6 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -229,31 +240,36 @@
        "3     p         x           y         w       t    p               f   \n",
        "4     e         x           s         g       f    n               f   \n",
        "\n",
-       "  gill-spacing gill-size gill-color  ... stalk-surface-below-ring  \\\n",
-       "0            c         n          k  ...                        s   \n",
-       "1            c         b          k  ...                        s   \n",
-       "2            c         b          n  ...                        s   \n",
-       "3            c         n          n  ...                        s   \n",
-       "4            w         b          k  ...                        s   \n",
+       "  gill-spacing gill-size gill-color stalk-shape stalk-root  \\\n",
+       "0            c         n          k           e          e   \n",
+       "1            c         b          k           e          c   \n",
+       "2            c         b          n           e          c   \n",
+       "3            c         n          n           e          e   \n",
+       "4            w         b          k           t          e   \n",
        "\n",
-       "  stalk-color-above-ring stalk-color-below-ring veil-type veil-color  \\\n",
-       "0                      w                      w         p          w   \n",
-       "1                      w                      w         p          w   \n",
-       "2                      w                      w         p          w   \n",
-       "3                      w                      w         p          w   \n",
-       "4                      w                      w         p          w   \n",
+       "  stalk-surface-above-ring stalk-surface-below-ring stalk-color-above-ring  \\\n",
+       "0                        s                        s                      w   \n",
+       "1                        s                        s                      w   \n",
+       "2                        s                        s                      w   \n",
+       "3                        s                        s                      w   \n",
+       "4                        s                        s                      w   \n",
        "\n",
-       "  ring-number ring-type spore-print-color population habitat  \n",
-       "0           o         p                 k          s       u  \n",
-       "1           o         p                 n          n       g  \n",
-       "2           o         p                 n          n       m  \n",
-       "3           o         p                 k          s       u  \n",
-       "4           o         e                 n          a       g  \n",
+       "  stalk-color-below-ring veil-type veil-color ring-number ring-type  \\\n",
+       "0                      w         p          w           o         p   \n",
+       "1                      w         p          w           o         p   \n",
+       "2                      w         p          w           o         p   \n",
+       "3                      w         p          w           o         p   \n",
+       "4                      w         p          w           o         e   \n",
        "\n",
-       "[5 rows x 23 columns]"
+       "  spore-print-color population habitat  \n",
+       "0                 k          s       u  \n",
+       "1                 n          n       g  \n",
+       "2                 n          n       m  \n",
+       "3                 k          s       u  \n",
+       "4                 n          a       g  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +279,7 @@
     "\n",
     "\n",
     "df = pd.read_csv('mushrooms.csv')\n",
-    "pd.set_option('display.max_rows', df.shape[0]+1))\n",
+    "pd.set_option('display.max_columns', 100)\n",
     "df.head()\n",
     "\n"
    ]
