Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -48,228 +48,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>class</th>\n",
-       "      <th>cap-shape</th>\n",
-       "      <th>cap-surface</th>\n",
-       "      <th>cap-color</th>\n",
-       "      <th>bruises</th>\n",
-       "      <th>odor</th>\n",
-       "      <th>gill-attachment</th>\n",
-       "      <th>gill-spacing</th>\n",
-       "      <th>gill-size</th>\n",
-       "      <th>gill-color</th>\n",
-       "      <th>stalk-shape</th>\n",
-       "      <th>stalk-root</th>\n",
-       "      <th>stalk-surface-above-ring</th>\n",
-       "      <th>stalk-surface-below-ring</th>\n",
-       "      <th>stalk-color-above-ring</th>\n",
-       "      <th>stalk-color-below-ring</th>\n",
-       "      <th>veil-type</th>\n",
-       "      <th>veil-color</th>\n",
-       "      <th>ring-number</th>\n",
-       "      <th>ring-type</th>\n",
-       "      <th>spore-print-color</th>\n",
-       "      <th>population</th>\n",
-       "      <th>habitat</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>p</td>\n",
-       "      <td>x</td>\n",
-       "      <td>s</td>\n",
-       "      <td>n</td>\n",
-       "      <td>t</td>\n",
-       "      <td>p</td>\n",
-       "      <td>f</td>\n",
-       "      <td>c</td>\n",
-       "      <td>n</td>\n",
-       "      <td>k</td>\n",
-       "      <td>e</td>\n",
-       "      <td>e</td>\n",
-       "      <td>s</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>p</td>\n",
-       "      <td>k</td>\n",
-       "      <td>s</td>\n",
-       "      <td>u</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>e</td>\n",
-       "      <td>x</td>\n",
-       "      <td>s</td>\n",
-       "      <td>y</td>\n",
-       "      <td>t</td>\n",
-       "      <td>a</td>\n",
-       "      <td>f</td>\n",
-       "      <td>c</td>\n",
-       "      <td>b</td>\n",
-       "      <td>k</td>\n",
-       "      <td>e</td>\n",
-       "      <td>c</td>\n",
-       "      <td>s</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>p</td>\n",
-       "      <td>n</td>\n",
-       "      <td>n</td>\n",
-       "      <td>g</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>e</td>\n",
-       "      <td>b</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>t</td>\n",
-       "      <td>l</td>\n",
-       "      <td>f</td>\n",
-       "      <td>c</td>\n",
-       "      <td>b</td>\n",
-       "      <td>n</td>\n",
-       "      <td>e</td>\n",
-       "      <td>c</td>\n",
-       "      <td>s</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>p</td>\n",
-       "      <td>n</td>\n",
-       "      <td>n</td>\n",
-       "      <td>m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>p</td>\n",
-       "      <td>x</td>\n",
-       "      <td>y</td>\n",
-       "      <td>w</td>\n",
-       "      <td>t</td>\n",
-       "      <td>p</td>\n",
-       "      <td>f</td>\n",
-       "      <td>c</td>\n",
-       "      <td>n</td>\n",
-       "      <td>n</td>\n",
-       "      <td>e</td>\n",
-       "      <td>e</td>\n",
-       "      <td>s</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>p</td>\n",
-       "      <td>k</td>\n",
-       "      <td>s</td>\n",
-       "      <td>u</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>e</td>\n",
-       "      <td>x</td>\n",
-       "      <td>s</td>\n",
-       "      <td>g</td>\n",
-       "      <td>f</td>\n",
-       "      <td>n</td>\n",
-       "      <td>f</td>\n",
-       "      <td>w</td>\n",
-       "      <td>b</td>\n",
-       "      <td>k</td>\n",
-       "      <td>t</td>\n",
-       "      <td>e</td>\n",
-       "      <td>s</td>\n",
-       "      <td>s</td>\n",
-       "      <td>w</td>\n",
-       "      <td>w</td>\n",
-       "      <td>p</td>\n",
-       "      <td>w</td>\n",
-       "      <td>o</td>\n",
-       "      <td>e</td>\n",
-       "      <td>n</td>\n",
-       "      <td>a</td>\n",
-       "      <td>g</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  class cap-shape cap-surface cap-color bruises odor gill-attachment  \\\n",
-       "0     p         x           s         n       t    p               f   \n",
-       "1     e         x           s         y       t    a               f   \n",
-       "2     e         b           s         w       t    l               f   \n",
-       "3     p         x           y         w       t    p               f   \n",
-       "4     e         x           s         g       f    n               f   \n",
-       "\n",
-       "  gill-spacing gill-size gill-color stalk-shape stalk-root  \\\n",
-       "0            c         n          k           e          e   \n",
-       "1            c         b          k           e          c   \n",
-       "2            c         b          n           e          c   \n",
-       "3            c         n          n           e          e   \n",
-       "4            w         b          k           t          e   \n",
-       "\n",
-       "  stalk-surface-above-ring stalk-surface-below-ring stalk-color-above-ring  \\\n",
-       "0                        s                        s                      w   \n",
-       "1                        s                        s                      w   \n",
-       "2                        s                        s                      w   \n",
-       "3                        s                        s                      w   \n",
-       "4                        s                        s                      w   \n",
-       "\n",
-       "  stalk-color-below-ring veil-type veil-color ring-number ring-type  \\\n",
-       "0                      w         p          w           o         p   \n",
-       "1                      w         p          w           o         p   \n",
-       "2                      w         p          w           o         p   \n",
-       "3                      w         p          w           o         p   \n",
-       "4                      w         p          w           o         e   \n",
-       "\n",
-       "  spore-print-color population habitat  \n",
-       "0                 k          s       u  \n",
-       "1                 n          n       g  \n",
-       "2                 n          n       m  \n",
-       "3                 k          s       u  \n",
-       "4                 n          a       g  "
+       "class                        2\n",
+       "cap-shape                    6\n",
+       "cap-surface                  4\n",
+       "cap-color                   10\n",
+       "bruises                      2\n",
+       "odor                         9\n",
+       "gill-attachment              2\n",
+       "gill-spacing                 2\n",
+       "gill-size                    2\n",
+       "gill-color                  12\n",
+       "stalk-shape                  2\n",
+       "stalk-root                   5\n",
+       "stalk-surface-above-ring     4\n",
+       "stalk-surface-below-ring     4\n",
+       "stalk-color-above-ring       9\n",
+       "stalk-color-below-ring       9\n",
+       "veil-type                    1\n",
+       "veil-color                   4\n",
+       "ring-number                  3\n",
+       "ring-type                    5\n",
+       "spore-print-color            9\n",
+       "population                   6\n",
+       "habitat                      7\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +91,7 @@
     "\n",
     "df = pd.read_csv('mushrooms.csv')\n",
     "pd.set_option('display.max_columns', 100)\n",
-    "df.head()\n",
+    "df.nunique()\n",
     "\n"
    ]
   },
