--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
    "outputs": [],
    "source": [
     "# Define y\n",
-    "y = df.cl\n",
+    "y = df.class\n",
     "y = y['p']\n",
     "\n",
     "# Define X\n",
