--- a/index.ipynb
+++ b/index.ipynb
@@ -118,7 +118,7 @@
     "y = y['p']\n",
     "\n",
     "# Define X\n",
-    "X = df.drop(columns=)\n",
+    "X = df.drop(columns='class')\n",
     "X = None\n",
     "\n",
     "# Import train_test_split\n",
