--- a/index.ipynb
+++ b/index.ipynb
@@ -119,7 +119,7 @@
     "\n",
     "# Define X\n",
     "X = df.drop(columns='class')\n",
-    "X = pd.get_dummies\n",
+    "X = pd.get_dummies(X)\n",
     "\n",
     "# Import train_test_split\n",
     "\n",
