Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -109,9 +109,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-cf320f581298>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-cf320f581298>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    y = df.class\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Define y\n",
     "y = df.class\n",
@@ -119,10 +128,10 @@
     "\n",
     "# Define X\n",
     "X = df.drop(columns='class')\n",
-    "X = pd.get_dummies(X, prefix = X.,drop_first=True)\n",
+    "X = pd.get_dummies(X, drop_first=True)\n",
     "\n",
     "# Import train_test_split\n",
-    "\n",
+    "y, X\n",
     "\n",
     "# Split the data into training and test sets\n",
     "X_train, X_test, y_train, y_test = None"
