Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,7 @@
    ],
    "source": [
     "# Define y\n",
-    "y = df.class\n",
+    "y = df[class\n",
     "y = y['p']\n",
     "\n",
     "# Define X\n",
