--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,7 @@
    ],
    "source": [
     "# Define y\n",
-    "y = df['class']\n",
+    "y = pd.get_dummies(df['class']\n",
     "y = y['p']\n",
     "\n",
     "# Define X\n",
