--- a/index.ipynb
+++ b/index.ipynb
@@ -134,6 +134,8 @@
     "X = pd.get_dummies(X, drop_first=True)\n",
     "\n",
     "# Import train_test_split\n",
+    "from sklear\n",
+    "\n",
     "\n",
     "# Split the data into training and test sets\n",
     "X_train, X_test, y_train, y_test = None"
