--- a/index.ipynb
+++ b/index.ipynb
@@ -134,7 +134,7 @@
     "X = pd.get_dummies(X, drop_first=True)\n",
     "\n",
     "# Import train_test_split\n",
-    "from sklear\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "\n",
     "# Split the data into training and test sets\n",
