Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,7 @@
     "\n",
     "\n",
     "# Split the data into training and test sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
    ]
   },
   {
