--- a/index.ipynb
+++ b/index.ipynb
@@ -139,9 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/utils/validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    }
+   ],
    "source": [
     "# Import LogisticRegression\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -153,7 +162,7 @@
     "model_log = logreg.fit(X_train, y_train)\n",
     "\n",
     "# Predict on test set\n",
-    "y_hat_test = model"
+    "y_hat_test = model_log.predict(X_test)"
    ]
   },
   {
