--- a/index.ipynb
+++ b/index.ipynb
@@ -181,7 +181,7 @@
    "outputs": [],
    "source": [
     "# Import roc_curve, auc\n",
-    "from sklearn.me\n",
+    "from sklearn.metrics import roc_curve\n",
     "\n",
     "# Calculate the probability scores of each point in the training set\n",
     "y_train_score = None\n",
