--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,7 @@
     "y_train_score = model_log.decision_function(X_train)\n",
     "\n",
     "# Calculate the fpr, tpr, and thresholds for the training set\n",
-    "train_fpr, train_tpr, thresholds = None\n",
+    "train_fpr, train_tpr, thresholds = roc_curve\n",
     "\n",
     "# Calculate the probability scores of each point in the test set\n",
     "y_score = None\n",
