--- a/index.ipynb
+++ b/index.ipynb
@@ -176,9 +176,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "roc_curve() missing 2 required positional arguments: 'y_true' and 'y_score'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-ec2c5540e0b5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Calculate the fpr, tpr, and thresholds for the training set\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mtrain_fpr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_tpr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthresholds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mroc_curve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# Calculate the probability scores of each point in the test set\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: roc_curve() missing 2 required positional arguments: 'y_true' and 'y_score'"
+     ]
+    }
+   ],
    "source": [
     "# Import roc_curve, auc\n",
     "from sklearn.metrics import roc_curve, auc\n",
@@ -187,7 +199,7 @@
     "y_train_score = model_log.decision_function(X_train)\n",
     "\n",
     "# Calculate the fpr, tpr, and thresholds for the training set\n",
-    "train_fpr, train_tpr, thresholds = roc_curve\n",
+    "train_fpr, train_tpr, thresholds = roc_curve()\n",
     "\n",
     "# Calculate the probability scores of each point in the test set\n",
     "y_score = None\n",
